# personal_assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/api/: assistant.py  clickup.py  deps.py  discovery.py  health.py  links.py  metrics.py  settings.py  sync.py  tickets.py  workflow_runs.py
backend/app/assistant/: action_executor.py  context_builder.py  conversation_service.py  safety_policy.py
backend/app/core/: config.py  constants.py  errors.py  security.py  time.py
backend/app/db/: mongo.py
backend/app/integrations/: clickup.py  clickup_contract.py  fresh.py  openai_client.py
backend/app/prompts/: draft_reply_v1.txt  ticket_summary_v1.txt  ticket_user_story_v1.txt
backend/app/repositories/: ai_draft_repository.py  app_settings_repository.py  assistant_action_repository.py  base.py  conversation_repository.py  integration_link_repository.py  ticket_cache_repository.py  workflow_run_repository.py
backend/app/schemas/: ai.py  clickup.py  common.py  discovery.py  (+5 more)
backend/tests/: test_assistant_triage.py  test_clickup_approval_flow.py  test_clickup_payload.py  test_clickup_status_sync.py  test_clickup_time_tracking_tool.py  test_conversation_service_time_agent.py  test_conversations.py  test_fresh_client.py  test_freshservice_reply_safety.py  test_metrics_service.py  test_security.py  test_sla.py  test_ticket_to_clickup_tool.py  test_ticket_to_task_deduplication.py  test_time_agent.py  test_user_story.py
(+177 files in other folders)
